--- a/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
+++ b/UI/skd-ref-site/src/app/image-categorizer/image-categorizer.component.html
@@ -31,7 +31,7 @@
       <div class='row'>
         <div class='col'>
 
-          Photographer*:
+          Photographer:
           <input type='text' [(ngModel)]="selectedPhotographerName" (change)="contactChanged(selectedPhotographerName, 'photographer', 'name')" />
           <br /> Photographer Website:
           <input type='text' [(ngModel)]="selectedPhotographerWebsite" (change)="contactChanged(selectedPhotographerWebsite, 'photographer', 'webpage')" />
