last minute tweaks before go live

--- a/UI/skd-ref-site/src/app/home/home.component.html
+++ b/UI/skd-ref-site/src/app/home/home.component.html
@@ -7,11 +7,12 @@
                     <app-welcome></app-welcome>
                     <app-news></app-news>
 
+                    <hr/>
                     <div>
                         This is a new beta version of the site! Here are a few ways you can help:
                         <ul>
                             <li>Submit translation fixes (or more languages!) <a routerLink="/translate">here</a></li>
-                            <li>Submit bugs to <a href='mailto:artomizer@sketchdaily.net'>artomizer@sketchdaily.net</a></li>
+                            <li>Submit bugs to <a href='mailto:artomizer@sketchdaily.net'>artomizer@sketchdaily.net</a> (or message <a href='https://www.reddit.com/message/compose/?to=artomizer'>/u/artomizer</a> on Reddit)</li>
                             <li><a href='https://ko-fi.com/artomizer'>Make a small donation</a> so I can <span class='strike'>buy
                                     a boat</span> keep the site up and running</li>
                             <li>Fix bugs and add new features on <a href='https://github.com/faintpixel/skdRefSite'>github</a></li>
