--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -9,6 +9,11 @@
   <li>prixt</li>
 </ul>
 
+<h2>Polish</h2>
+<ul>
+  <li>Tośka Świetlana</li>
+</ul>
+
 <h2>Russian</h2>
 <ul>
   <li>curtistruffle</li>
