contributors and bug fixes

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -1,29 +1,99 @@
-<h1>Translations</h1>
-<h2>German</h2>
-<ul>
-  <li>Jamelin</li>
-</ul>
+<app-header></app-header>
+<div class='container'>
+  <div>
+    <h1>Contributors</h1>
 
-<h2>Korean</h2>
-<ul>
-  <li>prixt</li>
-</ul>
+    This site wouldn't be possible without the support of our amazing community. People have contributed in a variety
+    of ways, and it's all hugely appreciated.
 
-<h2>Polish</h2>
-<ul>
-  <li>Tośka Świetlana</li>
-</ul>
+    <div class='category'>
+      <h1>Development & Bug Fixes</h1>
 
-<h2>Russian</h2>
-<ul>
-  <li>curtistruffle</li>
-</ul>
+      <ul>
+        <li>Artomizer</li>
+        <li>DavidWinters</li>
+      </ul>
+    </div>
 
-<h2>Spanish</h2>
-<ul>
-  <li>Sergio Roda</li>
-  <li>Haru</li>
-  <li>caguaidesuflan</li>
-  <li>Mari</li>
-</ul>
+    <div class='category'>
+      <h1>Graphics</h1>
+      <ul>
+        <li>H_AK</li>
+        <li>Skitchbot</li>
+      </ul>
+    </div>
 
+    <div class='category'>
+      <h1>Images</h1>
+      There are too many photographers and models to list here, but these are without a doubt the most vital contributors we have. No images
+      means no site, so I encourage all of you to occasionally poke through the info screen for images you like and
+      support the photographers however you can.
+    </div>
+
+    <div class='category'>
+      <h1>Translations</h1>
+
+      <h2>Dutch</h2>
+      <ul>
+        <li>Wellalla</li>
+      </ul>
+
+      <h2>French</h2>
+      <ul>
+        <li>Pyoh</li>
+      </ul>
+
+      <h2>German</h2>
+      <ul>
+        <li>Jamelin</li>
+        <li>Powerspank</li>
+      </ul>
+
+      <h2>Korean</h2>
+      <ul>
+        <li>prixt</li>
+      </ul>
+
+      <h2>Polish</h2>
+      <ul>
+        <li>Tośka Świetlana</li>
+      </ul>
+
+      <h2>Portuguese</h2>
+      <ul>
+        <li>Guilherme Monção</li>
+      </ul>
+      <h2>Russian</h2>
+      <ul>
+        <li>H_AK</li>
+        <li>curtistruffle</li>
+      </ul>
+
+      <h2>Spanish</h2>
+      <ul>
+        <li>@zJorge</li>
+        <li>Sergio Roda</li>
+        <li>Haru</li>
+        <li>caguaidesuflan</li>
+        <li>Mari</li>
+      </ul>
+
+      <h2>Swedish</h2>
+      <ul>
+        <li>Bewinged</li>
+        <li>Figauro</li>
+      </ul>
+    </div>
+
+    <div class='category'>
+      <h1>Donors</h1>
+      Thanks to everyone who has made a donation. Currently it's all going towards hosting fees, but there are
+      plans to try and push it towards more exciting things for the community like additional translations, giveaways, or a SkD yacht.
+    </div>
+
+    <div class='category'>
+      Finally, the most extra special thanks to everyone who forgives me for forgetting to thank them here!
+    </div>
+
+  </div>
+</div>
