--- a/UI/skd-ref-site/src/app/home/home.component.html
+++ b/UI/skd-ref-site/src/app/home/home.component.html
@@ -9,6 +9,10 @@
 
                     <hr/>
                     <div>
+                        Thanks to all of our <a href='/contributors'>amazing contributors!</a>
+                    </div>
+                    <hr/>
+                    <div>
                         This is a new beta version of the site! Here are a few ways you can help:
                         <ul>
                             <li>Submit translation fixes (or more languages!) <a routerLink="/translate">here</a></li>
