--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -72,10 +72,11 @@
       <h2>Spanish</h2>
       <ul>
         <li>@zJorge</li>
-        <li>Sergio Roda</li>
-        <li>Haru</li>
+        <li>anaiD37</li>
         <li>caguaidesuflan</li>
+        <li>Haru</li>        
         <li>Mari</li>
+        <li>Sergio Roda</li>        
       </ul>
 
       <h2>Swedish</h2>
