--- a/UI/skd-ref-site/src/app/reference-filters/reference-filters.component.html
+++ b/UI/skd-ref-site/src/app/reference-filters/reference-filters.component.html
@@ -154,7 +154,11 @@
         <option value='120'>{{'Timers.minutes' | translate:{'total': '2'} }}</option>
         <option value='300'>{{'Timers.minutes' | translate:{'total': '5'} }}</option>
         <option value='600'>{{'Timers.minutes' | translate:{'total': '10'} }}</option>
-        <option value='class'>{{'Timers.Class mode' | translate }}</option>
+        <option value='900'>{{'Timers.minutes' | translate:{'total': '15'} }}</option>
+        <option value='1200'>{{'Timers.minutes' | translate:{'total': '20'} }}</option>
+        <option value='1800'>{{'Timers.minutes' | translate:{'total': '30'} }}</option>
+        <option value='2400'>{{'Timers.minutes' | translate:{'total': '40'} }}</option>
+        <option value='3600'>{{'Timers.minutes' | translate:{'total': '60'} }}</option>
         <option value='class'>{{'Timers.No timers' | translate }}</option>
       </select>
     </div>
