chinese and portuguese updates

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -33,6 +33,11 @@
     <div class='category'>
       <h1>Translations</h1>
 
+      <h2>Chinese</h2>
+      <ul>
+        <li>Lin</li>
+      </ul>
+
       <h2>Dutch</h2>
       <ul>
         <li>Wellalla</li>
@@ -62,6 +67,7 @@
       <h2>Portuguese</h2>
       <ul>
         <li>Guilherme Monção</li>
+        <li>LeoVinicius</li>
       </ul>
       <h2>Russian</h2>
       <ul>
