--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -45,18 +45,32 @@
 
       <h2>French</h2>
       <ul>
+        <li>Charlotte</li>
         <li>Pyoh</li>
+        <li>thais</li>
       </ul>
 
       <h2>German</h2>
       <ul>
+        <li>Bernd Schmitz</li>
+        <li>irukard</li>
         <li>Jamelin</li>
         <li>Powerspank</li>
+      </ul>
+
+      <h2>Hebrew</h2>
+      <ul>
+        <li>flypo</li>
       </ul>
 
       <h2>Korean</h2>
       <ul>
         <li>prixt</li>
+      </ul>
+
+      <h2>Norwegian</h2>
+      <ul>
+        <li>pigie</li>
       </ul>
 
       <h2>Polish</h2>
@@ -67,8 +81,10 @@
       <h2>Portuguese</h2>
       <ul>
         <li>Guilherme Monção</li>
+        <li>Hélder</li>
         <li>LeoVinicius</li>
       </ul>
+
       <h2>Russian</h2>
       <ul>
         <li>H_AK</li>
@@ -87,8 +103,15 @@
 
       <h2>Swedish</h2>
       <ul>
+        <li>@uddaida</li>
         <li>Bewinged</li>
         <li>Figauro</li>
+      </ul>
+
+      <h2>Turkish</h2>
+      <ul>
+        <li>hm</li>
+        <li>mavi</li>
       </ul>
     </div>
 
