--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -38,6 +38,12 @@
         <li>Lin</li>
       </ul>
 
+      <h2>Czech</h2>
+      <ul>
+        <li>Samantha-dragon</li>
+        <li>Dreit</li>
+      </ul>
+
       <h2>Dutch</h2>
       <ul>
         <li>Wellalla</li>
@@ -63,6 +69,16 @@
         <li>flypo</li>
       </ul>
 
+      <h2>Hungarian</h2>
+      <ul>
+        <li>Private Coppery</li>
+      </ul>
+
+      <h2>Japanese</h2>
+      <ul>
+        <li>CRN</li>
+      </ul>
+
       <h2>Korean</h2>
       <ul>
         <li>prixt</li>
@@ -83,12 +99,16 @@
         <li>Guilherme Monção</li>
         <li>Hélder</li>
         <li>LeoVinicius</li>
+        <li>FourEyes</li>
       </ul>
 
       <h2>Russian</h2>
       <ul>
         <li>H_AK</li>
         <li>curtistruffle</li>
+        <li>Игорь</li>
+        <li>OLHA</li>
+        <li>dappy</li>
       </ul>
 
       <h2>Spanish</h2>
@@ -98,7 +118,8 @@
         <li>caguaidesuflan</li>
         <li>Haru</li>        
         <li>Mari</li>
-        <li>Sergio Roda</li>        
+        <li>Sergio Roda</li>       
+        <li>Piero Bertoni</li> 
       </ul>
 
       <h2>Swedish</h2>
@@ -106,6 +127,11 @@
         <li>@uddaida</li>
         <li>Bewinged</li>
         <li>Figauro</li>
+      </ul>
+
+      <h2>Thai</h2>
+      <ul>
+        <li>AquaNoixl</li>
       </ul>
 
       <h2>Turkish</h2>
