updated dutch translations

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -47,6 +47,9 @@
       <h2>Dutch</h2>
       <ul>
         <li>Wellalla</li>
+        <li>SchabrechtsK</li>
+        <li>JessedePug</li>
+        <li>marieke</li>
       </ul>
 
       <h2>French</h2>
