making comment required for language translations

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -57,6 +57,8 @@
         <li>Charlotte</li>
         <li>Pyoh</li>
         <li>thais</li>
+        <li>Jolie-Marie</li>
+        <li>Joana</li>
       </ul>
 
       <h2>German</h2>
