added persian language

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -94,6 +94,11 @@
         <li>pigie</li>
       </ul>
 
+      <h2>Persian</h2>
+      <ul>
+        <li>Im_zucchini</li>
+      </ul>
+
       <h2>Polish</h2>
       <ul>
         <li>Tośka Świetlana</li>
