--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -50,6 +50,7 @@
         <li>SchabrechtsK</li>
         <li>JessedePug</li>
         <li>marieke</li>
+        <li>Mewww</li>
       </ul>
 
       <h2>French</h2>
@@ -77,6 +78,11 @@
       <h2>Hungarian</h2>
       <ul>
         <li>Private Coppery</li>
+      </ul>
+
+      <h2>Italian</h2>
+      <ul>
+        <li>Dyseu</li>
       </ul>
 
       <h2>Japanese</h2>
