--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -80,9 +80,16 @@
         <li>Private Coppery</li>
       </ul>
 
+      <h2>Indonesian</h2>
+      <ul>
+        <li>CanisRufus</li>
+      </ul>
+
       <h2>Italian</h2>
       <ul>
         <li>Dyseu</li>
+        <li>SaidMo</li>
+        <li>Gabriele Vierti</li>
       </ul>
 
       <h2>Japanese</h2>
