--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -162,6 +162,13 @@
         <li>hm</li>
         <li>mavi</li>
       </ul>
+
+      <h2>Vietnamese</h2>
+      <ul>
+        <li>Châu Minh</li>
+      </ul>
+
+
     </div>
 
     <div class='category'>
