contributer update and spanish fixes

--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -90,6 +90,9 @@
         <li>Dyseu</li>
         <li>SaidMo</li>
         <li>Gabriele Vierti</li>
+        <li>Gaglia93</li>
+        <li>cla7997</li>
+        <li>Spacetyrant93</li>
       </ul>
 
       <h2>Japanese</h2>
@@ -143,6 +146,7 @@
         <li>Mari</li>
         <li>Sergio Roda</li>       
         <li>Piero Bertoni</li> 
+        <li>Vorenoxx</li>
       </ul>
 
       <h2>Swedish</h2>
