--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -168,6 +168,11 @@
         <li>Yıldırım</li>
       </ul>
 
+      <h2>Ukrainian</h2>
+      <ul>
+        <li>Богдан Львов</li>
+      </ul>
+
       <h2>Vietnamese</h2>
       <ul>
         <li>Châu Minh</li>
