--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -44,6 +44,11 @@
         <li>Dreit</li>
       </ul>
 
+      <h2>Danish</h2>
+      <ul>
+        <li>Josefine sommer</li>
+      </ul>
+
       <h2>Dutch</h2>
       <ul>
         <li>Wellalla</li>
@@ -93,6 +98,8 @@
         <li>Gaglia93</li>
         <li>cla7997</li>
         <li>Spacetyrant93</li>
+        <li>Daniele</li>
+        <li>fcpellegrino</li>
       </ul>
 
       <h2>Japanese</h2>
@@ -171,6 +178,7 @@
       <h2>Ukrainian</h2>
       <ul>
         <li>Богдан Львов</li>
+        <li>Oksana</li>
       </ul>
 
       <h2>Vietnamese</h2>
