--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -112,6 +112,11 @@
         <li>prixt</li>
       </ul>
 
+      <h2>Macedonian</h2>
+      <ul>
+        <li>a-bradley</li>
+      </ul>
+
       <h2>Norwegian</h2>
       <ul>
         <li>pigie</li>
