--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -58,6 +58,11 @@
         <li>Mewww</li>
       </ul>
 
+      <h2>Finnish</h2>
+      <ul>
+        <li>Roosa J</li>
+      </ul>
+
       <h2>French</h2>
       <ul>
         <li>Charlotte</li>
@@ -189,6 +194,7 @@
       <h2>Vietnamese</h2>
       <ul>
         <li>Châu Minh</li>
+        <li>Dedguy Quock</li>
       </ul>
 
 
