--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -145,6 +145,11 @@
         <li>FourEyes</li>
       </ul>
 
+      <h2>Romanian</h2>
+      <ul>
+        <li>Endy1508</li>
+      </ul>
+
       <h2>Russian</h2>
       <ul>
         <li>H_AK</li>
@@ -183,6 +188,7 @@
         <li>hm</li>
         <li>mavi</li>
         <li>Yıldırım</li>
+        <li>MorDonluSherlock</li>
       </ul>
 
       <h2>Ukrainian</h2>
@@ -195,6 +201,7 @@
       <ul>
         <li>Châu Minh</li>
         <li>Dedguy Quock</li>
+        <li>Truc Dinh</li>
       </ul>
 
 
