--- a/UI/skd-ref-site/src/app/contributors/contributors.component.html
+++ b/UI/skd-ref-site/src/app/contributors/contributors.component.html
@@ -61,6 +61,7 @@
       <h2>Finnish</h2>
       <ul>
         <li>Roosa J</li>
+        <li>Patajätkä</li>
       </ul>
 
       <h2>French</h2>
@@ -88,6 +89,7 @@
       <h2>Hungarian</h2>
       <ul>
         <li>Private Coppery</li>
+        <li>NL</li>
       </ul>
 
       <h2>Indonesian</h2>
@@ -105,6 +107,10 @@
         <li>Spacetyrant93</li>
         <li>Daniele</li>
         <li>fcpellegrino</li>
+        <li>Gabriele G</li>
+        <li>Raven Draws</li>
+        <li>andre</li>
+        <li>jparvi</li>
       </ul>
 
       <h2>Japanese</h2>
@@ -195,6 +201,7 @@
       <ul>
         <li>Богдан Львов</li>
         <li>Oksana</li>
+        <li>Bxel</li>
       </ul>
 
       <h2>Vietnamese</h2>
